<resources>
    <string name="app_name">MyFood</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Surnames">Surnames</string>
    <string name="Email">Email</string>
    <string name="ConfPass">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="forgotPass">I forgot my password</string>
    <string name="Login">Login</string>
    <string name="forgotPasswordText">Enter your email and we will send you a link to reset your password</string>
    <string name="SendLink">Send Link</string>
    <string name="Back">Back</string>

    <string name="productDescription">Product image</string>
    <string name="Change">Change</string>
    <string name="OCR">OCR</string>
    <string name="ProductName">Product Name</string>
    <string name="BarCode">Barcode</string>
    <string name="Scan">Scan</string>
    <string name="Brand">Brand</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="QuantityUnit">Quantity Unit</string>
    <string name="Weight">Weight</string>
    <string name="Place">Place</string>
    <string name="ExpirationDate">Expiration Date</string>
    <string name="PreferenceDate">Preference Date</string>
    <string name="Add">Add</string>
    <string name="Nutrients">Nutrients</string>
    <string name="GroupNutrients">Group Nutrients</string>

    <string name="StorePlace">Store Place</string>
</resources>