<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfood.mvp.login.LoginActivity">

    <Spinner
        android:id="@+id/sLanguageLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/etNameLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Name"
            android:inputType="text"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/turquoise" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/turquoise" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUpLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="#0000FF" />

            <Button
                android:id="@+id/btnPasswordForgotten"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/forgotPass"
                android:textAllCaps="false"
                android:textColor="#0000FF" />
        </LinearLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/turquoise"
            android:text="@string/Login"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>