<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvForgotPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/forgotPass"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:hintTextColor="@color/turquoise" />

        <TextView
            android:id="@+id/tvForgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:hint="@string/forgotPasswordText"
            app:hintTextColor="@color/turquoise" />

        <EditText
            android:id="@+id/etEmailForgotPass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/turquoise" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/turquoise"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_arrow_back_ios_new_24" />

            <Button
                android:id="@+id/btnSendLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/turquoise"
                android:text="@string/SendLink"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>