<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/productDescription"
                    app:srcCompat="@drawable/image_default" />

                <Button
                    android:id="@+id/buttonChangeImage"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|start"
                    android:backgroundTint="@color/turquoise"
                    android:text="@string/Change"
                    android:textAllCaps="false" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="end">

                    <Button
                        android:id="@+id/buttonOCR"
                        android:layout_width="68dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/turquoise"
                        android:text="@string/OCR"
                        android:textAllCaps="false" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/labelProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/ProductName"
                android:textColor="@color/turquoise" />

            <EditText
                android:id="@+id/editTextProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="text"
                android:text="" />

            <TextView
                android:id="@+id/labelBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/BarCode"
                android:textColor="@color/turquoise" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextBarcode"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:autofillHints="creditCardNumber"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="end">

                    <Button
                        android:id="@+id/buttonScan"
                        android:layout_width="110dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/turquoise"
                        android:text="@string/Scan"
                        android:textAllCaps="false" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelQuantity"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Quantity"
                        android:textColor="@color/turquoise" />

                    <EditText
                        android:id="@+id/editTextQuantity"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="creditCardNumber"
                        android:ems="10"
                        android:inputType="number"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelQuantityUnit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/QuantityUnit"
                        android:textColor="@color/turquoise" />

                    <Spinner
                        android:id="@+id/spinnerQuantityUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelWeight"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Weight"
                        android:textColor="@color/turquoise" />

                    <EditText
                        android:id="@+id/editTextWeight"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="creditCardNumber"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelPlace"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/Place"
                        android:textColor="@color/turquoise" />

                    <Spinner
                        android:id="@+id/spinnerPLace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelExpirationDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ExpirationDate"
                    android:textColor="@color/turquoise" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextExpirationDate"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="creditCardNumber"
                        android:drawableRight="@drawable/ic_baseline_calendar_month_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="DD/MM/YYYY"
                        android:enabled="false"
                        android:inputType="none"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/datePickerExpirationDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/turquoise"
                        android:src="@drawable/ic_baseline_calendar_month_24"
                        android:textAllCaps="false" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelPreferenceDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/PreferenceDate"
                    android:textColor="@color/turquoise" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextPreferenceDate"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autofillHints="creditCardNumber"
                        android:drawableRight="@drawable/ic_baseline_calendar_month_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="DD/MM/YYYY"
                        android:enabled="false"
                        android:inputType="none"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/datePickerPreferenceDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/turquoise"
                        android:src="@drawable/ic_baseline_calendar_month_24"
                        android:textAllCaps="false" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="end">

                    <Button
                        android:id="@+id/buttonAddPurchaseProduct"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/turquoise"
                        android:layout_marginTop="20dp"
                        android:text="@string/Add"
                        android:textAllCaps="false" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>
</FrameLayout>
