<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layoutAddShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lASName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ProductName"
            android:textColor="@color/turquoise" />

        <EditText
            android:id="@+id/etASName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="text"
            android:text="" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lASQuantity"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Quantity"
                    android:textColor="@color/turquoise" />

                <EditText
                    android:id="@+id/etASQuantity"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:autofillHints="creditCardNumber"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lASQuantityUnit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/QuantityUnit"
                    android:textColor="@color/turquoise" />

                <Spinner
                    android:id="@+id/sASQuantityUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end">

                <Button
                    android:id="@+id/btnASProduct"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/turquoise"
                    android:text="@string/Add"
                    android:textAllCaps="false" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
