<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/layoutPantryNutrient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/header"
                layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/productDescription"
                    app:srcCompat="@drawable/image_default" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="end">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/btnDeletePantryProduct"
                                android:layout_width="30dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="7dp"
                                android:backgroundTint="@color/white"
                                app:srcCompat="@drawable/ic_baseline_delete_24" />

                            <ImageButton
                                android:id="@+id/btnUpdatePantryProduct"
                                android:layout_width="30dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="7dp"
                                android:backgroundTint="@color/white"
                                app:srcCompat="@drawable/ic_baseline_edit_note_24" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btnCharacteristics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:backgroundTint="@color/turquoise"
                            android:text="@string/Nutrients"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lGroupNutrients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/GroupNutrients"
                    android:textColor="@color/turquoise"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sGroupNutrients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutContentNutrients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
